freebsd-glue (0.1.6) UNRELEASED; urgency=low

  * Define __FreeBSD_version as __FreeBSD_kernel_version when available.

 -- Robert Millan <rmh@debian.org>  Wed, 02 Oct 2013 23:41:17 +0200

freebsd-glue (0.1.5) unstable; urgency=low

  * Add include_next <sys/queue.h> to sys/queue.h in order to bring back
    macros that were disabled in kernel headers.

 -- Robert Millan <rmh@debian.org>  Mon, 09 Sep 2013 15:06:42 +0200

freebsd-glue (0.1.4) unstable; urgency=low

  * Implement srandomdev().
  * Implement getdiskbyname().
  * Add <timeconv.h> stubs.

 -- Robert Millan <rmh@debian.org>  Mon, 02 Sep 2013 20:48:37 +0200

freebsd-glue (0.1.3) unstable; urgency=low

  * linkaddr.c is kFreeBSD-specific.

 -- Robert Millan <rmh@debian.org>  Tue, 06 Aug 2013 18:14:14 +0200

freebsd-glue (0.1.2) unstable; urgency=low

  * Add <sys/_stdint.h> to fix buildability of <libutil.h>.

 -- Robert Millan <rmh@debian.org>  Tue, 06 Aug 2013 17:22:40 +0200

freebsd-glue (0.1.1) unstable; urgency=low

  * Put includes of <sys/kern/*.h> OUTSIDE the header protection (which
    they intentionally duplicate).
  * FreeBSD <stdio.h> and <sys/types.h> have a kludge to declare
    lseek(). Duplicate the Glibc declaration here.
  * <sys/stat.h> implicitly includes <sys/time.h>.
  * Add trimdomain, link_addr and link_ntoa.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 18:20:40 +0200

freebsd-glue (0.1.0) unstable; urgency=low

  * Fix header pollution in <unistd.h> by moving non-trivial inline
    functions into static objects of their own.
  * Add nlm_syscall() inline function.

 -- Robert Millan <rmh@debian.org>  Sun, 04 Aug 2013 16:21:56 +0200

freebsd-glue (0.0.10) unstable; urgency=low

  [ Guillem Jover ]
  * Switch to canonical Vcs URLs.

  [ Robert Millan ]
  * Add <net/ethernet.h> which includes <netinet/ether.h> (for
    ether_ntoa).

 -- Robert Millan <rmh@debian.org>  Thu, 01 Aug 2013 21:17:17 +0200

freebsd-glue (0.0.9) unstable; urgency=low
