@@ -2,6 +2,7 @@ LIB=	freebsd-glue
 SRCS=	\
 	exec.c \
 	feature_present.c \
+	fstab.c \
 	getosreldate.c \
 	random.c \
 	trimdomain.c \
@@ -13,6 +14,7 @@ SYS!=	dpkg-architecture -qDEB_HOST_GNU_SYSTEM
 SRCS+=	\
 	disklabel.c \
 	linkaddr.c \
+	socket.c \
 	${NULL}
 .endif
 
